--- a/Data Engineering Pipelines with Snowpark Python/Alpha Vantage Stocks/VASOMTSITURI 2025-12-26 10:50:45.ipynb
+++ b/Data Engineering Pipelines with Snowpark Python/Alpha Vantage Stocks/VASOMTSITURI 2025-12-26 10:50:45.ipynb
@@ -5,12 +5,12 @@
    "name": "streamlit"
   },
   "lastEditStatus": {
-   "notebookId": "43lyzr7iv5mda57sziil",
+   "notebookId": "xmmhltmxmgfoe2umvkia",
    "authorId": "2029321824938",
    "authorName": "VASOMTSITURI",
    "authorEmail": "vasiko.mtsituri@gmail.com",
-   "sessionId": "9ba87ffb-564b-4962-a112-f984dbe8af27",
-   "lastEditTime": 1766732144884
+   "sessionId": "9a8e7e29-7131-4c05-817d-4ae705b3145b",
+   "lastEditTime": 1766732888140
   }
  },
  "nbformat_minor": 5,
@@ -23,7 +23,7 @@
     "language": "python",
     "name": "cell1"
    },
-   "source": "\nimport pandas as pd\n\n# We can also use Snowpark for our analyses!\nfrom snowflake.snowpark.context import get_active_session\nsession = get_active_session()\n\n# Read stage files\ndf = session.read.options({\"infer_schema\":True}).json('@\"SNOWFLAKE_CONNECTED_GCS_US\".\"PUBSUB_EVENTS\".\"MY_GCS_STAGE\"/NVDA_daily_2025-12-25.json')\ndf.printSchema()\n",
+   "source": "\nimport pandas as pd\n\n# We can also use Snowpark for our analyses!\nfrom snowflake.snowpark.context import get_active_session\nsession = get_active_session()\n\n# Read stage files\ndf = session.read.json('@\"SNOWFLAKE_CONNECTED_GCS_US\".\"PUBSUB_EVENTS\".\"MY_GCS_STAGE\"/')",
    "execution_count": null,
    "outputs": []
   }
